--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -4,40 +4,38 @@ on:
       - master
 
 jobs:
-
   build:
     name: Build, push, and deploy
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout master
+        uses: actions/checkout@master
 
-    - name: Checkout master
-      uses: actions/checkout@master
+      - name: Update SHA
+        run: echo $GITHUB_SHA > $GITHUB_WORKSPACE/site/_meta
 
-    - name: Update SHA
-      run: echo $GITHUB_SHA > $GITHUB_WORKSPACE/site/_meta
+      - name: Build container image
+        run: docker build -t registry.digitalocean.com/agroxy-registry/static-example:$(echo $GITHUB_SHA | head -c7) .
 
-    - name: Build container image
-      run: docker build -t registry.digitalocean.com/asb/static-example:$(echo $GITHUB_SHA | head -c7) .
+      - name: Install doctl
+        uses: digitalocean/action-doctl@v2
+        with:
+          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
 
-    - name: Install doctl
-      uses: digitalocean/action-doctl@v2
-      with:
-        token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+      - name: Log in to DigitalOcean Container Registry with short-lived credentials
+        run: doctl registry login --expiry-seconds 600
 
-    - name: Log in to DigitalOcean Container Registry with short-lived credentials
-      run: doctl registry login --expiry-seconds 600
+      - name: Push image to DigitalOcean Container Registry
+        run: docker push registry.digitalocean.com/agroxy-registry/static-example
 
-    - name: Push image to DigitalOcean Container Registry
-      run: docker push registry.digitalocean.com/asb/static-example
+      - name: Update deployment file
+        run: TAG=$(echo $GITHUB_SHA | head -c7) && sed -i 's|<IMAGE>|registry.digitalocean.com/agroxy-registry/static-example:'${TAG}'|' $GITHUB_WORKSPACE/config/deployment.yml
 
-    - name: Update deployment file
-      run: TAG=$(echo $GITHUB_SHA | head -c7) && sed -i 's|<IMAGE>|registry.digitalocean.com/asb/static-example:'${TAG}'|' $GITHUB_WORKSPACE/config/deployment.yml
+      - name: Save DigitalOcean kubeconfig
+        run: doctl kubernetes cluster kubeconfig save actions-example-k8s-1-16
 
-    - name: Save DigitalOcean kubeconfig
-      run: doctl kubernetes cluster kubeconfig save actions-example-k8s-1-16
+      - name: Deploy to DigitalOcean Kubernetes
+        run: kubectl apply -f $GITHUB_WORKSPACE/config/deployment.yml
 
-    - name: Deploy to DigitalOcean Kubernetes
-      run: kubectl apply -f $GITHUB_WORKSPACE/config/deployment.yml
-
-    - name: Verify deployment
-      run: kubectl rollout status deployment/static-example
+      - name: Verify deployment
+        run: kubectl rollout status deployment/static-example
