--- a/config/deployment.yml
+++ b/config/deployment.yml
@@ -20,26 +20,26 @@ spec:
         app: static-example
     spec:
       containers:
-      - name: static-example
-        image: <IMAGE>
-        ports:
-        - containerPort: 5000
-        resources:
-          requests:
-            cpu: 100m
-          limits:
-            cpu: 100m
+        - name: static-example
+          image: <IMAGE>
+          ports:
+            - containerPort: 5000
+          resources:
+            requests:
+              cpu: 100m
+            limits:
+              cpu: 100m
       imagePullSecrets:
-      - name: registry-asb
+        - name: registry-agroxy-registry
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: static-example-service
   annotations:
-    external-dns.alpha.kubernetes.io/hostname: "doctl-action.do-api.dev"
-    service.beta.kubernetes.io/do-loadbalancer-certificate-id: "14cf21de-04d0-4241-8b3e-9b79575a3d09"
-    service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: "true"
+    service.beta.kubernetes.io/do-loadbalancer-algorithm: "least_connections"
+    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
+    service.beta.kubernetes.io/do-loadbalancer-healthcheck-path: "/"
 spec:
   type: LoadBalancer
   ports:
